# simple-flask-azd

./: pyproject.toml
src/: app.py
