[project]
name = "simple-flask-azd"
version = "0.1.0"
description = ""
authors = [
    {name = "Gwyneth Pena-Siguenza",email = "gwynethpena@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" }
]
